# coin_prelisting_analyst

./: README.md  README.md.orig  README_BASE_180523.md  README_LOCAL_180523.md
backend/: .env.docker.example  .env.example  .gitignore  Dockerfile  __init__.py  alembic.ini  alembic.py  alembic_main.ini  docker-compose.yml  dockerfile  init-db.sh  playground.json  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: __init__.py  deps.py  health.py
backend/app/api/v1/: auth.py  coins.py  metrics.py  scores.py  scoring_weights.py  suggestions.py  users.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/crud/: coins.py  metrics.py  scores.py  scoring_weights.py  suggestions.py  users.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/models/: __init__.py  coin.py  config.py  metric.py  score.py  scoring_weight.py  suggestion.py  user.py  user_activity.py
backend/app/schemas/: __init__.py  auth.py  coin.py  metric.py  score.py  scoring_weight.py  suggestion.py  user.py
backend/app/services/: analytics.py  coin_updater.py  coin_updater_sync.py  notifications.py  scoring.py  scoringsync.py
backend/app/tasks/: __init__.py  bootstrap.py  coin_data.py  notifications.py  scoring.py  scoring_all.py
backend/app/utils/: populate_db.py
backend/app/utils/api_clients/: coingecko.py  coingeckosync.py  github.py  reddit.py  twitter.py
backend/migrations/: env.py
backend/migrations/main/: env.py
backend/migrations/main/versions/: 10ced9e1f960_new_migration.py  2d92dfe21ef2_new_migration.py  2f4a831cc6b9_new_migration.py  36a88a2bb86d_new_migration.py  68214affdde7_new_migration.py  6cfaa6bec471_init2.py  7d379beec5f9_new_migration.py  7e002a759e32_new_migration.py  7e3dbd21e14e_new_migration.py  aada1fe9e6ab_new_migration.py  f68f2954fe74_new_migration.py
backend/migrations/test/: alembic_test.ini  env.py
backend/migrations/test/versions/: 092caf218d5b_new_migration.py  0e11dafdb984_new_migration.py  1cca2efaf703_new_migration.py  2212584a31d6_new_migration.py  25fe0ffd85bc_new_migration.py  2ccdda6a0688_new_migration.py  39a9d9b9ef65_new_migration.py  4e246a7c69a8_new_migration.py  6393c8bd193d_init2.py  94ea16315eba_new_migration.py  b430bbfe045f_new_migration.py
backend/migrations/versions/: 05677a03cb73_fixing_db.py  28cb5e065469_fix_scoring_weight_relationship.py  7250eaf9f375_initial_migration.py
backend/scripts/: alembic.py  alembic_wrapper.py  init-db.sh  seed_weights.py
backend/tests/: conftest.py
backend/tests/test_api/: test_api_auth.py  test_api_coins.py  test_api_health.py  test_api_metrics.py  test_api_scores.py  test_api_scoring_weights.py  test_api_suggestions.py  test_api_users.py  test_auth.py  test_coins.py  test_metrics.py  test_suggestions.py
backend/tests/test_failures/: test_external_api.py  test_failures_external_api.py  test_failures_notifications.py
backend/tests/test_services/: test_analytics.py  test_services_analytics.py  test_services_coin_updater.py  test_services_coin_updater_sync.py  test_services_notifications.py  test_services_scoring.py
backend/tests/test_tasks/: test_coin_data.py  test_scoring.py  test_tasks_bootstrap.py  test_tasks_coin_data.py  test_tasks_notifications.py  test_tasks_scoring.py
