[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "UP", "C"]
ignore = [
    "E402",  # Module level import not at top of file
    "F821",  # Undefined name (e.g., in Alembic context)
]
fixable = ["ALL"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "alembic",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/**/env.py" = ["E402"]

[tool.poetry]
name = "coin-prelisting-analyst"
version = "0.1.0"
description = "Cryptocurrency pre-listing analysis platform"
authors = ["Maaz Bushra <shullimaaz@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.15.1"
amqp = "5.3.1"
annotated-types = "0.7.0"
anyio = "4.8.0"
asgi-lifespan = "2.1.0"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
bcrypt = "4.3.0"
billiard = "4.2.1"
celery = "5.4.0"
certifi = "2025.1.31"
cffi = "1.17.1"
click = "8.1.8"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
cryptography = "44.0.2"
dnspython = "2.7.0"
ecdsa = "0.19.0"
email_validator = "2.2.0"
fastapi = "0.115.11"
gevent = "24.11.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.28.1"
idna = "3.10"
kombu = "5.4.2"
loguru = "0.7.3"
Mako = "1.3.9"
MarkupSafe = "3.0.2"
packaging = "24.2"
passlib = "1.7.4"
platformdirs = "4.3.6"
prompt_toolkit = "3.0.50"
psycopg2-binary = "2.9.10"
pyasn1 = "0.4.8"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pydantic_core = "2.27.2"
python-dateutil = "2.9.0.post0"
python-decouple = "3.8"
python-dotenv = "1.0.1"
python-jose = "3.4.0"
PyYAML = "6.0.2"
redis = "5.2.1"
rsa = "4.9"
six = "1.17.0"
sniffio = "1.3.1"
SQLAlchemy = "2.0.38"
starlette = "0.46.1"
typing_extensions = "4.12.2"
tzdata = "2025.1"
uvicorn = "0.34.0"
uvloop = "0.21.0"
vine = "5.1.0"
watchfiles = "1.0.4"
wcwidth = "0.2.13"
websockets = "15.0.1"
"zope.event" = "5.0"
"zope.interface" = "7.2"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.1"
mypy = "1.15.0"
mypy-extensions = "1.0.0"
pathspec = "0.12.1"
pluggy = "1.5.0"
respx = "0.22.0"
ruff = "0.9.10"
tomli = "2.2.1"

[tool.poetry.group.test.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.25.3"
pytest-mock = "3.14.0"
iniconfig = "2.0.0"
exceptiongroup = "1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "." ]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_level = "INFO"
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning"
]
testpaths = ["tests"]
